tests/ui/target_modifiers/defaults_check.error.stderr
error: mixing `-Zreg-struct-return` will cause an ABI mismatch in crate `defaults_check`
  --> $DIR/defaults_check.rs:15:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zreg-struct-return` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zreg-struct-return=true` in this crate is incompatible with unset `-Zreg-struct-return` in dependency `default_reg_struct_return`
   = help: unset `-Zreg-struct-return` in this crate or set `-Zreg-struct-return=true` in `default_reg_struct_return`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=reg-struct-return` to silence this error

error: aborting due to 1 previous error

